<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layout_for_ingredents_list">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_ingredent_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/tv_ingredents_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ingredents_label"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>